--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h2 { text-align: center;
 h3 {text-align: center;
 color: lightcyan;
 font-style: italic;}
+p1 {text-align: center;}
 
 body{ background-color: teal;
 }
