--- a/style.css
+++ b/style.css
@@ -23,3 +23,59 @@ img {
 .circular--square { border-radius: 50%;}
 div { text-align:center ;}
 ul {display:inline-block;text-align: left;color:}
+.image{
+    position: relative;
+    width: 400px;}
+.image__img{
+    display:block;
+    width:100%;}
+.image__overlay{
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    background: rgba(0,0,0,0.6);
+    color: white;
+    font-family:Arial, Helvetica, sans-serif;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+}
+.image__overlay > * {
+    transform: translateY(20px);
+    transition: transform 0.25s;
+}
+.image__overlay:hover{
+    opacity: 1;
+}
+.image__overlay:hover > * {
+    transform: translate(0);
+}
+.image__title{
+    font-size: 2em;
+    font-weight: bold;
+}
+.image__description{
+    font-size: 1.25em;
+    margin-top: 0.25em;
+}
+canvas {
+    border: 1px solid black;
+    width: 560px;
+    height: 360px;
+  }
+.class {position: relative;}
+*{box-sizing:border-box;
+}
+.image{
+    float:left;
+    width: 33.33%;
+    padding:3px
+}
+.image{
+    height: 300px;
+}
